--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -360,7 +360,54 @@ another generic tool (useful for non .NET devs) for providing an instant UI arou
 
 [![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-custom-appsettings.png)](https://youtu.be/GjVipOqwZMA)
 
-An impressively capable .NET Core App that fits into a tiny **20kb .zip** footprint thanks to [Gist Desktop App's Architecture](https://sharpscript.net/docs/gist-desktop-apps). It's small dynamic `#Script` & Vue TypeScript code-base also makes it highly customizable to tailor & further extend with 
+It makes use of the [app](/netcore-windows-desktop) dotnet tool for running Chromium
+[Gist Desktop Apps](https://sharpscript.net/sharp-apps/gist-desktop-apps) on-the-fly without installation, from a single URL that can also
+[mix in additional gists](/mix-tool) which can be used in SharpData to configure RDBMS's, copy SQLite databases and
+apply per-database customizations to add navigable deep links and customized UI Views to each table resultset.
+
+Whilst SharpData supports [connecting to most popular RDBMS's](https://github.com/ServiceStack/ServiceStack.OrmLite#8-flavours-of-ormlite-is-on-nuget), it's 
+especially useful for being able to deploy an instant stand-alone UI with an embedded SQLite databases which can be published independently in a gist and
+launched from a single URL.
+
+For an example of this in action we've published customized gists for the 
+[Northwind](https://docs.microsoft.com/en-us/dotnet/framework/data/adonet/sql/linq/downloading-sample-databases) and 
+[Chinook](https://www.sqlitetutorial.net/sqlite-sample-database/) SQLite databases which after installing the latest 
+[app](/netcore-windows-desktop) dotnet tool:
+
+    $ dotnet tool install -g app    
+
+Can be run from the link below in a Windows x64 Desktop App:
+
+<ul>
+    <li><strong><a name="app://sharpdata?mix=northwind.sharpdata">app://sharpdata?mix=northwind.sharpdata</a></strong></li>
+    <li><strong><a name="app://sharpdata?mix=chinook.sharpdata">app://sharpdata?mix=chinook.sharpdata</a></strong></li>
+</ul>
+
+Or via command-line:
+
+    $ app open sharpdata mix northwind.sharpdata
+    $ app open sharpdata mix chinook.sharpdata
+
+Cross platform using the [x dotnet tool](/dotnet-tool) (in Default Browser):
+
+    $ x open sharpdata mix northwind.sharpdata
+    $ x open sharpdata mix chinook.sharpdata
+
+Each of these options will download & run the latest version of [SharpData](https://github.com/NetCoreApps/SharpData) along with a 
+copy of the [northwind.sharpdata](https://gist.github.com/gistlyn/0ce0d5b828303f1cb4637450b563adbd) or 
+[chinook.sharpdata](https://gist.github.com/gistlyn/96b10369daf94897531810841cb097f2) gists on-the-fly containing the embedded SQLite DB along with any
+UI customizations.
+
+#### Hosted as a .NET Core App
+
+As [NetCoreApps/SharpData](https://github.com/NetCoreApps/SharpData) is also a standard .NET Core project, it can also be deployed as a 
+normal stand-alone .NET Core Web App:
+
+### [https://sharpdata.netcore.io](https://sharpdata.netcore.io)
+
+### Tiny footprint
+
+An impressively capable .NET Core App that fits into a tiny **20kb .zip** footprint thanks to [Gist Desktop App's Architecture](/gist-desktop-apps). It's small dynamic `#Script` & Vue TypeScript code-base also makes it highly customizable to tailor & further extend with 
 App-specific requirements - suitable for offering advanced system users a quick, capable customized read-only UI of your DBs.
 
 **SharpData** started as a demonstration showing how productive [#Script](https://sharpscript.net) can be in the number of areas where 
@@ -588,7 +635,7 @@ Or URL Scheme:
 
     app://local-redis
 
-Or if we want to run our own modified copy of the Redis Desktop App, we can [mix](https://docs.servicestack.net/mix-tool) the Gist files to our
+Or if we want to run our own modified copy of the Redis Desktop App, we can [mix](/mix-tool) the Gist files to our
 local directory:
 
     $ app mix local-redis
@@ -605,14 +652,21 @@ Other alias command include:
 
 ##### View single alias
 
-    $ app alias db
+    $ app alias mydb
 
 ##### Remove an alias
 
-    $ app unalias db
+    $ app unalias mydb
 
+### Open in Excel
 
-### Custom App Settings
+SharpData detects if **Excel** is installed and lets you open the un-paged filtered resultset directly by clicking the **Excel** button
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-excel.png) 
+
+This works seamlessly as it's able to "by-pass" the browser download where the query is performed by the back-end .NET Core Server who streams the response directly to the Users **Downloads** folder and launches it in Excel as soon as it's finished.
+
+### Custom SharpData UI
 
 Each time a Gist Desktop App is opened it downloads and overrides the existing Gist with the latest version which it loads in a [Gist VFS](/virtual-file-system#gistvirtualfiles) where any of its files can be overridden with a local copy.
 
@@ -620,15 +674,16 @@ As the App's working directory is preserved between restarts you can provide a c
 
     %USERPROFILE%\.sharp-apps\sharpdata\app.settings
 
-Where you can customize which RDBMS's and tables you want to be able to access, e.g:
+#### Custom app.settings
+
+Where you can perform basic customizations like which RDBMS's and tables you want to be able to access, e.g:
 
 ```
 debug false
-name Northwind SharpData
+name Northwind & TechStacks UI
 appName sharpdata
 
-db sqlite
-db.connection northwind.sqlite
+db.connections[northwind]  { db:sqlite,   connection:'northwind.sqlite' }
 db.connections[techstacks] { db:postgres, connection:$TECHSTACKS_DB }
 
 args.tables Customer,Order,OrderDetail,Category,Product,Employee,EmployeeTerritory,Shipper,Supplier,Region,Territory
@@ -639,13 +694,116 @@ Which will display both RDBMS Databases, showing only the user-specified tables 
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-custom-appsettings.png) 
 
-### Open in Excel
+### Advanced Customizations
 
-SharpData detects if **Excel** is installed and lets you open the un-paged filtered resultset directly by clicking the **Excel** button
+More advanced customizations can be added via dropping TypeScript/JavaScript source files in the `/custom` folder, e.g:
 
-![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-excel.png) 
+ - [/wwwroot/custom/chinook.ts](https://github.com/NetCoreApps/SharpData/blob/master/wwwroot/custom/chinook.ts)
+ - [/wwwroot/custom/northwind.ts](https://github.com/NetCoreApps/SharpData/blob/master/wwwroot/custom/northwind.ts)
 
-This works seamlessly as it's able to "by-pass" the browser download where the query is performed by the back-end .NET Core Server who streams the response directly to the Users **Downloads** folder and launches it in Excel as soon as it's finished.
+Which is how the [northwind.sharpdata](https://gist.github.com/gistlyn/0ce0d5b828303f1cb4637450b563adbd) and 
+[chinook.sharpdata](https://gist.github.com/gistlyn/96b10369daf94897531810841cb097f2) mix gists enable Customized Views for the Northwind
+& Chinook databases via their dbConfig registrations below:
+
+#### chinook
+
+```ts
+dbConfig('chinook', {
+    showTables: 'albums,artists,playlists,tracks,genres,media_types,customers,employees,invoices'.split(','),
+    tableName: splitPascalCase,
+    links: {
+        albums: {
+            ArtistId: (id:number) => `artists?filter=ArtistId:${id}`
+        },
+        employees: {
+            ReportsTo: (id:number) => `employees?filter=EmployeeId:${id}`
+        },
+        invoices: {
+            CustomerId: (id:number) => `customers?filter=CustomerId:${id}`
+        },
+        tracks: {
+            AlbumId: (id:number) => `albums?filter=AlbumId:${id}`,
+            MediaTypeId: (id:number) => `media_types?filter=MediaTypeId:${id}`,
+            GenreId: (id:number) => `genres?filter=GenreId:${id}`,
+        }
+    },
+    rowComponents: {
+        albums: Album,
+        artists: Artist,
+        playlists: Playlist,
+    }
+});
+```
+
+#### northwind
+
+```ts
+dbConfig('northwind', {
+    showTables: 'Customer,Order,OrderDetail,Category,Product,Employee,Shipper,Supplier,Region'.split(','),
+    tableName: splitPascalCase,
+    links: {
+        Order: {
+            CustomerId: (id:string) => `Customer?filter=Id:${id}`,
+            EmployeeId: (id:string) => `Employee?filter=Id:${id}`,
+            ShipVia: (id:number) => `Shipper?filter=Id:${id}`,
+        },
+        OrderDetail: {
+            OrderId: (id:string) => `Order?filter=Id:${id}`,
+            ProductId: (id:string) => `Product?filter=Id:${id}`,
+        },
+        Product: {
+            SupplierId: (id:number) => `Supplier?filter=Id:${id}`,
+            CategoryId: (id:number) => `Category?filter=Id:${id}`,
+        },
+        Territory: {
+            RegionId: (id:number) => `Region?filter=Id:${id}`,
+        },
+    },
+    rowComponents: {
+        Order,
+        Customer,
+    }
+});
+```
+
+These db customizations let you specify which RDBMS tables & the order that they should be displayed, the table names text casing function, 
+which columns to linkify & any custom Row Components for different tables.
+
+### Deploying Customizations
+
+When deploying as a .NET Core project the customizations are deployed with your [/wwwroot](https://github.com/NetCoreApps/SharpData/tree/master/wwwroot) 
+as normal.
+
+To make customizations available to load with the SharpData Gist Desktop App you'll need to publish the directory of customizations to a gist.
+Here are the customizations for the [northwind.sharpdata](https://gist.github.com/gistlyn/0ce0d5b828303f1cb4637450b563adbd) and 
+[chinook.sharpdata](https://gist.github.com/gistlyn/96b10369daf94897531810841cb097f2) gists:
+
+### [/dist-mix](https://github.com/NetCoreApps/SharpData/tree/master/dist-mix)
+ - [/chinook](https://github.com/NetCoreApps/SharpData/tree/master/dist-mix/chinook)
+    - [/custom](https://github.com/NetCoreApps/SharpData/tree/master/dist-mix/chinook/custom)
+        - [chinook.js](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/chinook/custom/chinook.js) - UI Customizations
+    - [app.settings](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/chinook/app.settings) - Custom App Settings
+    - [chinook.sqlite](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/chinook/chinook.sqlite) - Embedded SQLite database
+ - [/northwind](https://github.com/NetCoreApps/SharpData/tree/master/dist-mix/northwind)
+    - [/custom](https://github.com/NetCoreApps/SharpData/tree/master/dist-mix/chinook/northwind)
+        - [northwind.js](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/northwind/custom/northwind.js) - UI Customizations
+    - [app.settings](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/northwind/app.settings) - Custom App Settings
+    - [northwind.sqlite](https://github.com/NetCoreApps/SharpData/blob/master/dist-mix/northwind/northwind.sqlite) - Embedded SQLite database
+
+You can [publish a directory of files to a GitHub Gist](/sharp-apps/app-index#publishing-gist-desktop-apps) using the `x publish` command with the 
+GitHub **AccessToken** with gist write access you want to write to, e.g:
+
+    $ cd northwind
+    $ x publish -token %TOKEN%
+
+### Viewing Customizations
+
+When published these Gist Customizations can be viewed by gist id directly or by a user friendly gist mix or local alias:
+
+<ul>
+    <li><strong><a name="app://sharpdata?mix=0ce0d5b828303f1cb4637450b563adbd">app://sharpdata?mix=0ce0d5b828303f1cb4637450b563adbd</a></strong></li>
+    <li><strong><a name="app://sharpdata?mix=96b10369daf94897531810841cb097f2">app://sharpdata?mix=96b10369daf94897531810841cb097f2</a></strong></li>
+</ul>
 
 ### Custom Row Components
 
@@ -653,7 +811,7 @@ Whilst a tabular grid view might be a natural UI for browsing a database for dev
 A filtered tabular view makes it fast to find the record you're interested in, but it's not ideal for quickly finding related information about an Entity.
 
 To provide a more customized UX for different App UIs, **SharpData** includes support for **"Row Components"** 
-(defined in [/components/Custom](https://github.com/NetCoreApps/SharpData/tree/master/src/components/Custom)) to be able to quickly drill down & view 
+(defined in [/wwwroot/custom](https://github.com/NetCoreApps/SharpData/tree/master/wwwroot/custom)) to be able to quickly drill down & view 
 richer info on any record.
 
 For example when viewing an **Order**, it's natural to want to view the **Order Details** with it, enabled with the custom Vue component registration below:
@@ -665,12 +823,7 @@ For example when viewing an **Order**, it's natural to want to view the **Order 
 </div>
 <div v-else class="alert alert-danger">Order Id needs to be selected</div>`
 })
-class Order extends Vue {
-    @Prop() public db: string;
-    @Prop() public table: string;
-    @Prop() row: any;
-    @Prop() columns: ColumnSchema[];
-
+class Order extends RowComponent {
     details:any[] = [];
 
     get id() { return this.row.Id; }
@@ -679,7 +832,6 @@ class Order extends Vue {
         this.details = await sharpData(this.db,'OrderDetail',{ OrderId: this.id });
     }
 }
-registerRowComponent('main','Order', Order, 'order');
 ```
 
 All Row components are injected with the `db`, `table` properties, the entire `row` object that was selected as well as the Column Schema definition for that table. Inside the component you're free to display anything, in this case we're using the `sharpData` helper for calling the server `#Script` HTTP API to get it to fetch all `OrderDetail` entries for this order.
@@ -698,12 +850,12 @@ With the `Order` component registered we can now drill down into any **Order** t
 You're free to render any kind of UI in the row component, e.g. here's the [Customer.ts](https://github.com/NetCoreApps/SharpData/blob/master/src/components/Custom/Customer.ts) row component used to render a richer view for Customers:
 
 ```ts
-{% raw %}@Component({ template:
+@Component({ template:
 `<div v-if="id" class="pl-2">
     <h3 class="text-success">{{customer.ContactName}}</h3>
     <table class="table table-bordered" style="width:auto">
         <tr>
-            <th>Contact!</th>
+            <th>Contact</th>
             <td>{{ customer.ContactName }} ({{ customer.ContactTitle }})</td>
         </tr>
         <tr>
@@ -724,12 +876,9 @@ You're free to render any kind of UI in the row component, e.g. here's the [Cust
     </table>
     <jsonviewer :value="orders" />
 </div>
-<div v-else class="alert alert-danger">Customer Id needs to be selected</div>`})
-class Customer extends Vue {
-    @Prop() public db: string;
-    @Prop() public table: string;
-    @Prop() row: any;
-    @Prop() columns: ColumnSchema[];
+<div v-else class="alert alert-danger">Customer Id needs to be selected</div>`
+})
+class Customer extends RowComponent {
 
     customer:any = null;
     orders:any[] = [];
@@ -742,7 +891,6 @@ class Customer extends Vue {
         this.orders = await sharpData(this.db,'Order',{ CustomerId: this.id, fields })
     }
 }
-registerRowComponent('main','customer', Customer, 'customer');{% endraw %}
 ```
 
 Which looks like:
@@ -753,9 +901,9 @@ Which looks like:
 
 Whilst [NetCoreApps/SharpData](https://github.com/NetCoreApps/SharpData) can live a charmed life as a Desktop App, it's also just a regular ServiceStack .NET Core App with a [Startup.cs](https://github.com/NetCoreApps/SharpData/blob/master/Startup.cs) and `AppHost` that can be developed, published and deployed as you're used to, here's an instance of it [deployed as a .NET Core App on Linux](/netcore-deploy-rsync):
 
-##### [sharpdata.netcore.io](https://sharpdata.netcore.io)
+### [sharpdata.netcore.io](https://sharpdata.netcore.io)
 
-> For best experience we recommend running locally to experience it without latency of our servers in Germany
+> For best experience we recommend running against local network databases
 
 It's a unique ServiceStack App in that it doesn't contain any ServiceStack Services as it's only using pre-existing functionality already built into ServiceStack, 
 `#Script` for its HTTP APIs and a Vue SPA for its UI, so requires no `.dll's` need to be deployed with it.
