--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -166,6 +166,10 @@ If time constrained, skim the ToC below to get a quick overview of what's in thi
     - [PostgreSQL Array](#postgresql-array)
     - [PostgreSQL Params](#postgresql-array)
 
+### v5.9.2 Patch Release Notes
+
+If you're [using JWT Auth please upgrade to v5.9.2](/jwt-authprovider#upgrade-to-v592) when possible to resolve a JWT signature verification issue comparing different lengthed signatures.
+
 ## Introducing ServiceStack Studio!
 
 Another exciting development in this release is the successor to [Admin UI](https://github.com/ServiceStack/Admin): 
