--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -168,7 +168,7 @@ If time constrained, skim the ToC below to get a quick overview of what's in thi
 
 ### v5.9.2 Patch Release Notes
 
-If you're [using JWT Auth please upgrade to v5.9.2](/jwt-authprovider#upgrade-to-v592) when possible to resolve a JWT signature verification issue comparing different lengthed signatures.
+If you're [using JWT Auth please upgrade to v5.9.2](/jwt-authprovider#upgrade-to-v592) when possible to resolve a JWT signature verification issue.
 
 ## Introducing ServiceStack Studio!
 
