--- a/docs/_releases/v5.10.md
+++ b/docs/_releases/v5.10.md
@@ -66,6 +66,7 @@ ServiceStack Studio can then be used to give **Authorized Users an Instant UI** 
         - [Live Reload](#live-reload)
         - [Reload Time](#reload-time)
         - [Native Win32 API Interop](#native-win32-api-interop)
+ - [Fluent Validation](#fluent-validation)
  - [OrmLite](#ormlite)
  - [ServiceStack.Text](#servicestacktext)
 
@@ -2361,6 +2362,10 @@ below so they can be used within your App without needing to distribute them wit
 See [Win32 App](https://sharpscript.net/sharp-apps/win32) for more info & examples on Win32 integration.
 
 For more info checkout the github.com/NetCoreTemplates/vue-desktop project template docs.
+
+### Fluent Validation
+
+ServiceStack's interned version of [fluentvalidation.net](https://fluentvalidation.net/) was upgraded to their latest v9.3 preview release. Please refer to their [9.0 Upgrade Guide](https://docs.fluentvalidation.net/en/latest/upgrading-to-9.html) for changes.
 
 ### OrmLite
 
