--- a/docs/_releases/v5.10.md
+++ b/docs/_releases/v5.10.md
@@ -2166,9 +2166,9 @@ class GetFoo : OrderedRequest, IReturn<List<FooDto>>
 
 ## Blazor Web Assembly Template
 
-[Sebastian Faltoni](https://github.com/nukedbit) from the ServiceStack community continues to [Blazor WASM Template](https://github.com/nukedbit/blazor-wasm-servicestack) with new support for .NET 5.0.
+[Sebastian Faltoni](https://github.com/nukedbit) from the ServiceStack community continues to improve [Blazor WASM Template](https://github.com/nukedbit/blazor-wasm-servicestack), now with new support for .NET 5.0!
 
-New ServiceStack + Blazor WASM templates can be created with:
+A New ServiceStack + Blazor WASM templates can be created with:
 
     $ x new nukedbit/blazor-wasm-servicestack ProjectName
 
