--- a/docs/_releases/v5.10.md
+++ b/docs/_releases/v5.10.md
@@ -1378,7 +1378,7 @@ Where as other OS's predominantly use Certificates & Private Keys, which if need
 
 As mobile Apps is a target use-case for ServiceStack, this release also includes 1st class integration with **Sign In with Apple** OAuth provider. To assist with adoption we've also developed Sign In with Apple Integration Examples for iOS, Android & Web with working implementations for Flutter iOS/Android & SwiftUI Apps at:
 
-### https://github.com/NetCoreApps/AppleSignIn
+### [github.com/NetCoreApps/AppleSignIn](https://github.com/NetCoreApps/AppleSignIn)
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/dev/web-signin-with-apple-login.png)
 
@@ -1471,11 +1471,11 @@ Then you can view your App using the non-localhost domain name:
 
 You can then use the [Embedded Login Page](https://docs.servicestack.net/authentication-and-authorization#embedded-login-page-fallback) which renders the Sign In button for each of the registered OAuth providers in your `AuthFeature`:
 
- - https://dev.servicestack.com:5001/login
+    https://dev.servicestack.com:5001/login
 
 Clicking on **Sign in with Apple** button should let you Sign In with Apple. After successfully signing in you can view the `AllUsersInfo` Service to view a dump of all User Sessions & User Auth Info stored in the registered RDBMS:
 
- - https://dev.servicestack.com:5001/users
+    https://dev.servicestack.com:5001/users
 
 ## Flutter iOS & Android App
 
