--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -503,8 +503,8 @@ Multi replace with escaped string example:
    mix -replace term=with -replace "This Phrase"="With This" <name> <name> ...
 
 Only display available gists with a specific tag:
-  mix #<tag>
-  mix #<tag>,<tag>,<tag>
+  mix [tag]
+  mix [tag1,tag2]
 ```
 
 Although most of the time you're only going to run 2 commands, viewing available features with:
@@ -568,7 +568,7 @@ Where it displays different features that can be added to your App, where they'r
 
    Usage:  mix <name> <name> ...
 
-  Search:  mix #<tag> Available tags: auth, config, db, feature, lib, mq, project, react, sharp, svg, ui, vue
+  Search:  mix [tag] Available tags: auth, config, db, feature, lib, mq, project, react, sharp, svg, ui, vue
 
 Advanced:  mix ?
 ```
@@ -640,7 +640,7 @@ for example you can later configure your App to **enable auth** and configure it
 
 All DB servers are just as easily configurable, which we can quickly find using a `[db]` tag search:
 
-    $ mix #db
+    $ mix [db]
 
 Which will list all available `[db]` providers:
 
@@ -661,7 +661,7 @@ Results matching tag [db]:
 
    Usage:  mix <name> <name> ...
 
-  Search:  mix #<tag> Available tags: auth, config, db, feature, lib, mq, project, react, sharp, svg, ui, vue
+  Search:  mix [tag] Available tags: auth, config, db, feature, lib, mq, project, react, sharp, svg, ui, vue
 
 Advanced:  mix ?
 ```
@@ -840,7 +840,7 @@ As it can take a while to piece together how to configure your preferred Auth Re
 and utilize [Auth Events](/sessions#session-events) to populate it, we now recommend using `mix` to configure
 your preferred Auth Repository, which you can query with:
 
-    $ mix #auth
+    $ mix [auth]
 
 To display the current list of available Auth Repositories:
 
@@ -863,7 +863,7 @@ Results matching tag [auth]:
 Likewise we now recommend using `mix` to configure your preferred MQ Service, other than being quicker to add,
 it proposes adopting a naming convention in app settings and file names that other `mix` features can also make use of:
 
-    $ mix #mq
+    $ mix [mq]
 
 Currently available list of MQ Services:
 
@@ -2122,7 +2122,7 @@ as opposed to being forced to choose from a limited library in a fixed bundle.
 As creating svg bundles just involves dropping SVG images inside your `/svg/{group}/` folder, we're also able take advantage of `mix`
 to import SVG image-sets into your App with a single command. You can view the current list of all SVG image-sets on `mix` with:
 
-    $ mix #svg
+    $ mix [svg]
 
 Currently all [Material Design Icons](https://material.io/resources/icons/?style=baseline) are available separately by their logical group names:
 
