Re order sidebar links

--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -3017,7 +3017,7 @@ This is used in SPA project templates to catch the `Unauthorized` Exception thro
 
 ```hbs
 {% raw %}{{#script}}
-AUTH = {{ 'Authenticate' | execService({ ifErrorReturn: "null" }) | json }};
+AUTH = {{ 'Authenticate' |> execService({ ifErrorReturn: "null" }) |> json }};
 {{/script}}{% endraw %}
 ```
 
@@ -3026,7 +3026,7 @@ The new `execService` method is a readable alternative to calling a service via
 without arguments, e.g:
 
 ```hbs
-{% raw %}AUTH = {{ {} | sendToGateway('Authenticate', { ifErrorReturn: "null" }) | json }};{% endraw %}
+{% raw %}AUTH = {{ {} |> sendToGateway('Authenticate', { ifErrorReturn: "null" }) |> json }};{% endraw %}
 ```
 
 #### to
